Filter out connection exception + peer recovery waits for async